verification-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verification-service
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  replicas: 2
  selector:
    matchLabels:
      app: verification-service
  template:
    metadata:
      labels:
        app: verification-service
    spec:
      serviceAccountName: mopl-service
      containers:
      - name: nginx
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        image: bitnami/nginx:latest
        ports:
          - containerPort: 8000
            name: nginx
        volumeMounts:
          - name: nginx-config
            mountPath: /opt/bitnami/nginx/conf/server_blocks
      - name: verification-service
        readinessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        image: 852637827699.dkr.ecr.ap-northeast-2.amazonaws.com/mopl/verification-service:latest
        ports:
        - containerPort: 9000
          name: fastcgi
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
