verification-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verification-service
spec:
  selector:
    app: verification-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: fastcgi
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: verification-service-nginx
spec:
  selector:
    app: verification-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: nginx
  type: ClusterIP
