verification-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: smartparking
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-northeast-2:852637827699:regional/webacl/waf-mopl-prod-an2/3ad84bb7-4046-46c4-81d9-5e5a40853679
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:852637827699:certificate/c93fd79e-7c0c-4026-9441-eb7f6faa52d1
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-FS-1-2-Res-2020-10"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  name: verification-service-ingress
spec:
  rules:
  - host: user-api.mopl.app
    http:
      paths:
      - path: /verification
        pathType: Prefix
        backend:
          service:
            name: verification-service-nginx
            port:
              name: nginx
